# 5c-menu

./: .gitignore  PRD.md  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  db.py  dependencies.py  main.py  redis.py
backend/app/models/: __init__.py  dining_hall.py  dining_hours.py  enums.py  menu.py  parser_run.py
backend/app/parsers/: __init__.py  base.py  bonappetit.py  fallback.py  pomona.py  sodexo.py  station_filters.py
backend/app/routers/: admin.py  halls.py  menus.py  open_now.py
backend/app/schemas/: admin.py  halls.py  menus.py  open_now.py
backend/app/services/: auth_service.py  cache.py  coalesce.py  hours_service.py  menu_service.py
backend/tests/: conftest.py  test_api_halls.py  test_api_menus.py  test_api_open_now.py  test_bonappetit_parser.py  test_fallback.py  test_pomona_parser.py  test_sodexo_parser.py
backend/tests/fixtures/bonappetit/: collins_2026-02-07.html  malott_2026-02-07.html  mcconnell_2026-02-07.html
backend/tests/fixtures/pomona/: frank_2026-02-07.json  frank_page.html  frary_2026-02-07.json  oldenborg_2026-02-07.json
web/: package-lock.json  package.json  vitest.config.mts
web/src/: middleware.ts
(+71 files in other folders)
